--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
 [*]
 indent_size = 2
 indent_style = space
-insert_final_newline = true
+insert_final_newline = false
 trim_trailing_whitespace = true
